# wordpress_content_from_vscode

./: .gitignore  AGENTS.md  All Tests in Salesforce Certifications - Sheet2.csv  Judging the output for comparison agains.md  PROJECT_LOG.md  README.md  hero-deck-vol2.html  pyproject.toml  requirements.txt  site.schema.json  summary.md
.github/workflows/: tests.yml
docs/: WEBSITE_ONBOARDING.md  addons.md  tools.md
docs/testing/: CORE_TEST_MATRIX.md  TESTING.md
frontend/: README.md  readiness.py  requirements.txt  run.sh  server.py
frontend/static/: app.js  index.html  styles.css
tests/: test_content_and_plan.py  test_markdown_engine.py  test_new_site_cli.py  test_tools.py  test_vscode_tasks.py
tools/: make_example_image.py
websites/7ohwrecked.me/: .env.example  readme.md  site.yaml
websites/aivideo.poker/: .env.example  readme.md  site.yaml
websites/example.com/: .env.example  site.yaml
websites/geminiexporter.shop/: .env.example  readme.md  site.yaml
websites/keywordresearcher.shop/: .env.example  readme.md  site.yaml
websites/olive-manatee-953565.hostingersite.com/: readme.md  site.yaml
websites/praytoday.shop/: .env.example  readme.md  site.yaml
websites/salesforcecertready.shop/: .env.example  readme.md  site.yaml
wordpress_content_factory.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
wp_factory/: __init__.py  cli.py  config.py  content.py  content_overlap.py  dashboard.py  errors.py  featured_images.py  markdown_engine.py  models.py  reporting.py  seo_tools.py  state.py  sync.py  tools.py  utils.py  wordpress.py
(+132 files in other folders)
